--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,9 @@ jwt.get.token.uri=/authenticate
 jwt.refresh.token.uri=/refresh
 jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=604800
+
+
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=61c4681cd09e77
+spring.mail.password=ab020e98d9a1c6
